Development Portal (2014-03-25 shi)
==============================
All country codes are listed under ISO 3166-2
All 148 flags in (README.md in /art for more info)


Development Portal (2014-03-24 shi)
==============================
Refactor table code
Do away with <1 month queries (increase site load)
Added spinner for when things are loading
No more crappy stickyfooter hacks, tables will set you free.
Why? Because translations require flexible footer heights!
Background images bug fix
New landing page first phase - all of the countries (crs based)
adding background images for other countries


Development Portal (2014-03-23 shi) ^o^
==============================
Translations for crumbs


Development Portal (2014-03-22 shi)
==============================
Heat map info
Fix footer with translations
Fixed translation links for easier addition
Stats (key figures) are now links
Reworded explanations for black bars
Cleaned up translation names for easier reference where
sections are not shown on site as main info, eg.

	_alt_		= alt states for images
	_tip_		= title / hover states
	
Otherwise, names follow their sections in CSS names or
may include the following

	_declare_	= declarations of sources and meanings
	_logo_		= contains logo image
	_icon_		= contains icon


Development Portal (2014-03-21 shi)
==============================
New branding reflected on site
Links updated
Beige alert over entire site
Colour coding tables


Country Tracker (2014-03-20 shi)
==============================
No more inline styles for base.html
Naming conventions tightened to reflect new changes
Ctrack divs now changed to Dportal where needed
Code refactoring throughout for flexible css customisation


Country Tracker (2014-03-19 shi)
==============================
CSS classes clean up
Fixed flag sizes to align height, not width


Country Tracker (2014-03-13 shi)
==============================
CSS now has comments for sections
Fixed alignment bug for bar charts

