@@ -443,7 +443,7 @@ BANGLADESH
 	<table class="country min">
 		<tr>
 			<td>{country_name}</td>
-			<td><img src="{country_flag}" alt="{country_name} {flag_alt_text}" width="75"/></td>
+			<td><img src="{country_flag}" alt="{country_name} {flag_alt_text}"/></td>
 		</tr>
 	</table>
 	<div class="declare head">{declare_main_text}</div>
@@ -454,7 +454,7 @@ BANGLADESH
 	<table class="country">
 		<tr>
 			<td>{country_name}</td>
-			<td><img src="{country_flag}" alt="{country_name} {flag_alt_text}" width="150" height="90"/></td>
+			<td><img src="{country_flag}" alt="{country_name} {flag_alt_text}"/></td>
 		</tr>
 	</table>
 	<div class="declare head">{declare_main_text}</div>
