@@ -2,6 +2,8 @@ Development Portal (2014-03-25 shi)
 ==============================
 All country codes are listed under ISO 3166-2
 All 148 flags in (README.md in /art for more info)
+Fixed right padding for table.list first column
+Fixed image ratios for flags
 
 
 Development Portal (2014-03-24 shi)
